-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8-aarch64, 11, 13
-
Component/s: hotspot
-
b23
-
aarch64
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8225816 | 14 | Andrew Haley | P4 | Resolved | Fixed | team |
| JDK-8256607 | 11.0.11-oracle | Dukebot | P4 | Resolved | Fixed | b01 |
| JDK-8225411 | 11.0.5 | Andrew Haley | P4 | Resolved | Fixed | b01 |
| JDK-8224888 | 11.0.4 | Andrew Haley | P4 | Resolved | Fixed | b06 |
| JDK-8260840 | openjdk8u292 | Andrew Hughes | P4 | Resolved | Fixed | b01 |
The default AllocatePrefetchDistance is 3 * the dcache line size.
http://hg.openjdk.java.net/jdk/jdk11/file/tip/src/hotspot/cpu/aarch64/vm_version_aarch64.cpp#l132
If the cache line size is 256, we trip over an error at
http://hg.openjdk.java.net/jdk/jdk11/file/tip/src/hotspot/share/runtime/flags/jvmFlagConstraintsCompiler.cpp#l93
This is because the prefetch distance is limited to 512.
http://hg.openjdk.java.net/jdk/jdk11/file/tip/src/hotspot/cpu/aarch64/vm_version_aarch64.cpp#l132
If the cache line size is 256, we trip over an error at
http://hg.openjdk.java.net/jdk/jdk11/file/tip/src/hotspot/share/runtime/flags/jvmFlagConstraintsCompiler.cpp#l93
This is because the prefetch distance is limited to 512.
- backported by
-
JDK-8224888 AArch64: java/javac error with AllocatePrefetchDistance
-
- Resolved
-
-
JDK-8225411 AArch64: java/javac error with AllocatePrefetchDistance
-
- Resolved
-
-
JDK-8225816 AArch64: java/javac error with AllocatePrefetchDistance
-
- Resolved
-
-
JDK-8256607 AArch64: java/javac error with AllocatePrefetchDistance
-
- Resolved
-
-
JDK-8260840 AArch64: java/javac error with AllocatePrefetchDistance
-
- Resolved
-
- relates to
-
JDK-8257192 Integrate AArch64 JIT port into 8u
-
- Resolved
-
(1 relates to)