8224880: AArch64: java/javac error with AllocatePrefetchDistance

Reviewed-by: adinn